traces/bug_441.txt
examples++-load/gsl.cpp:441: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/gsl.cpp:441:1: initialization of callDoLoadInit
439.       gsl_set_error_handler(ffhandler);
440.   }
441. > LOADFUNC(Load_Init)

examples++-load/gsl.cpp:441:1: call to DoLoadInit
439.       gsl_set_error_handler(ffhandler);
440.   }
441. > LOADFUNC(Load_Init)

examples++-load/gsl.cpp:441:1: call to addInitFunct
  439.       gsl_set_error_handler(ffhandler);
  440.   }
  441. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
